_css/jtd.css
/* ... */
.searchbox-iconsvg {
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

/************************************************************
=============================================================

SIDE BAR

============================================================
************************************************************/

/* Fixed sidenav, full height */
.sidenav {
  height: 100%;
  width: 250px;
  position: fixed;
  background-color: rgb(152, 164, 174,.2);
  border-right: 1px solid rgb(152, 164, 174,.4);
  overflow-x: hidden;
  padding-top: 20px;
}

.sidenav-wrap {
  display: flex;
  height: 75vh;
  overflow-y: auto;
  padding-bottom: 10px;
}

.section-title{
  text-transform: uppercase;
  font-size: 14px;
  color:  rgb(152, 164, 174);
  letter-spacing: 1px;
  margin: 10px;
}

/* Style the sidenav links and the dropdown button */
.sidenav a, .dropdown-btn {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  color: black;
  display: block;
  border: none;
  background: none;
  width: 100%;
  text-align: left;
  cursor: pointer;
  outline: none;
}

/* On mouse-over */
.sidenav a:hover{
  background-color: white;
  max-width: 100%;
}

.sidenav li a {
  display: block;
  width: 250px;
}

/* Main content */
.main {
  margin-left: 250px; /* Same as the width of the sidenav */
  padding: 0px 10px;
}

/* Add an active class to the active dropdown button */
.active {
  color: white;
}

/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
.dropdown-container {
  display: none;
  background-color: #262626;
  padding-left: 8px;
}

/* Optional: Style the caret down icon */
.fa-caret-down {
  float: right;
  padding-right: 8px;
}


/* Some media queries for responsiveness */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}


.side-bar .header {
  display: flex;
  min-height: 80px;
  align-items: center;
}
.side-bar .header .title{
  padding-right:1rem;
  padding-left:1rem;
  flex-grow:1;
  display:flex;
  height:100%;
  align-items:center;
  padding-top:.75rem;
  padding-bottom:.75rem;
  color:#27262b;
  font-size:18px !important;
  line-height: 1.15em;
}
.show-menu {
  cursor: pointer;
  appearance:none;
  display:flex;
  height:100%;
  line-height: 80px;
  padding:1rem;
  align-items:center;
  color:#0E39B0;
  text-transform:uppercase;
  background:transparent;
  text-align:right;
  padding-right: 2rem;
  border:0;
  width: calc(100% - 320px);
  background-color: white;
}
.side-bar .menu {
  width: 100%;
  padding-right:1rem;
  padding-left:1rem
}
.menu-list{
  padding:0;
  margin-top:0;
  margin-bottom:0;
  list-style:none;
  /* get rid of indention */
}

.menu-list-child-list{
  padding-left:.75rem;
  list-style:none;
}
.menu-list-child-list .menu-list-link{
  color:#7d7d7d
}
.menu-list-child-list .menu-list-item{
  position:relative;
  margin-top: -10px;
}
/* .menu-list-child-list .menu-list-item::before{
  position:absolute;
  margin-top:0em;
  margin-left:-0.8em;
  color:rgba(92,89,98,0.3);
  content:"- "
} */
.menu-list-child-list .menu-list-item.active::before{
  color:#5c5962
}
.menu-list-item{
  font-size:14px !important;
  margin:0;
}
.menu-list-item .menu-list-child-list{
  display:none
}
.menu-list-item.active .menu-list-child-list{
  display:block
}
.menu-list-link{
  display:block;
  padding-top:0rem;
  padding-bottom:0rem;
  color:#000000
}
.menu-list-link.active{
  /* background-color: white; */
  color: rgb(237,28,36);
}

.footer {
  font-size: 13px;
  padding-right:1rem;
  padding-left:1rem;
  position:absolute;
  bottom:80px;
  left:0;
  padding-top:1rem;
  padding-bottom:1rem
}

/*Hide checkbox*/
input[type=checkbox]{display: none;}
/*Show menu when invisible checkbox is checked*/
input[type=checkbox]:checked ~ #side-menu{display: block;}

/* side bar adjustments for narrow mode (bar on top) */
@media (max-width : 49.99rem){
  /* Toggle menu off */
  .side-bar .menu {
    display: none;
    padding-left:35px;
    padding-bottom:15px;}
  .side-bar {
    border-bottom: 1px solid #eeebee;
  }
  .side-bar .header {
    padding-left: 15px;
    width: 150px;} /* middle space */
  .show-menu {display: block;}
}
/* side bar adjustments for narrow mode (bar on top) */
@media (min-width: 31.25rem){
  .side-bar .header .title{
    font-size:24px !important
  }
  .menu-list-item{
    font-size:16px !important
  }
}
/* side bar adjustments for medium mode (bar on side) */
@media (min-width: 50rem){
  .side-bar{
    flex-wrap: nowrap;
    position: absolute;
    width: 248px;
    height: 100%;
    flex-direction: column;
    align-items: flex-end;
  }
  .side-bar .header{
    z-index: 101;
    height: 80px;
    max-height: 80px;
    border-bottom: 1px solid #eeebee;
    padding-right:2rem;
    padding-left:2rem;
  }
  .side-bar .header .title{
    padding-top:.5rem;
    padding-bottom:.5rem
  }
  .show-menu {
    display:none
  }
  .side-bar .menu{
    width: 135px;
    padding-right:2rem;
    padding-left:2rem;
    padding-top:3rem;
    padding-bottom:1rem;
    overflow-y:auto;
    flex:1 1 auto
  }
  .side-bar .footer{
    padding-right:2rem;
    padding-left:2rem;
    position: static;
  }
}
/* side bar adjustments for wide mode (bar on side) */
@media (min-width: 66.5rem){
  .side-bar{
    width:calc((100% - 66.5rem) / 2 + 264px);
    min-width:264px;
  }
}
/* ... */

